typo fix CLOSE #3

--- a/Level_1_checks_to_be_deployed_v5.2/p_steps/Step4to5-MEDICINES.v07.14_05_2021.Rmd
+++ b/Level_1_checks_to_be_deployed_v5.2/p_steps/Step4to5-MEDICINES.v07.14_05_2021.Rmd
@@ -50,7 +50,7 @@ Sys.setlocale("LC_ALL", "C")
 ``` {r list_of_variables, echo = FALSE}
 total_var<-as.data.table( cbind(table_name="MEDICINES", 
         variable_name=c("person_id", "medicinal_product_id", "medicinal_product_atc_code", "date_dispensing", "date_prescription", "disp_number_medicinal_product",
-                        "presc_quantity_per_day", "presc_quantity_unit", "presc_duration_days", "product_lot_number", "inidication_code", "indication_code_vocabulary", "meaning_of_drug_record", "origin_of_drug_record", "prescriber_speciality", "prescriber_speciality_vocabulary", "visit_occurrence_id")))
+                        "presc_quantity_per_day", "presc_quantity_unit", "presc_duration_days", "product_lot_number", "indication_code", "indication_code_vocabulary", "meaning_of_drug_record", "origin_of_drug_record", "prescriber_speciality", "prescriber_speciality_vocabulary", "visit_occurrence_id")))
 ```
 
 ```{r check_directory, include=FALSE}
