--- a/Level_1_checks_to_be_deployed_v5.2/p_steps/Step4to5-SURVEY_OBSERVATIONS.v06.16_05_2021.Rmd
+++ b/Level_1_checks_to_be_deployed_v5.2/p_steps/Step4to5-SURVEY_OBSERVATIONS.v06.16_05_2021.Rmd
@@ -647,7 +647,7 @@ Res.con<-Res.con[["survey_id"]]#list of survey id present in SURVEY_OBSERVATIONS
 }
   
   if (length(continuous_files)==1){
-     continuous<-fread(continuous(paste0(tmp,continuous_files)))
+     continuous<-fread(paste0(tmp,continuous_files))
     continuous.tot<-continuous[,.N]
   }
   
